added delete handler /subscription/{subscription_id}
