# subscriptions_backend/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server.",
+        "description": "REST-service for aggregating data about users online subscriptions.",
         "title": "My API",
         "contact": {},
         "version": "1.0"
@@ -37,7 +37,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.PostCreateSubscriptionResponse"
                         }
                     },
                     "400": {
@@ -76,7 +76,50 @@
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/types.GetSubscriptionByIDResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
                             "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Subscription not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a subscription by their subscriptionID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscription"
+                ],
+                "summary": "Delete a subscription",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "UUID of the subscription",
+                        "name": "subscription_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.GetSubscriptionByIDResponse"
                         }
                     },
                     "400": {
@@ -128,7 +171,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.GetSubscriptionByIDResponse"
                         }
                     },
                     "400": {
@@ -148,6 +191,29 @@
         }
     },
     "definitions": {
+        "types.GetSubscriptionByIDResponse": {
+            "type": "object",
+            "properties": {
+                "end_date": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "subscription_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "types.PatchSubscriptionByIDRequest": {
             "type": "object",
             "properties": {
@@ -178,6 +244,14 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.PostCreateSubscriptionResponse": {
+            "type": "object",
+            "properties": {
+                "subscription_id": {
                     "type": "string"
                 }
             }
